working on adding visual feedback of user click location...also fixed issue where user is able to highlight interact with html elements in ways that we don't want them to. Also fixing issue where ad covers part of the webview in android

--- a/www/css/game.css
+++ b/www/css/game.css
@@ -24,6 +24,24 @@ html, body {
   -ms-touch-action:none;
 }
 
+/*
+ * this set of fixes is to prevent users from being able to interact with HTML elements 
+ * as if they were HTML elements aka prevents selecting, copying, etc
+ */
+*:not(input){
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -webkit-text-size-adjust: none;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+
+  -ms-touch-callout: none;
+  -ms-user-select: none;
+  -ms-text-size-adjust: none;
+  -ms-tap-highlight-color: rgba(0,0,0,0);
+}
+
+
+
 .fullscreen {
   position: absolute;
   height: 100vh;
@@ -114,6 +132,28 @@ html, body {
 .inline {
   display: inline-block;
 }
+
+@-webkit-keyframes target {
+    from {opacity: 1;}
+    to {opacity: 0;}
+}
+@keyframes target {
+    from {opacity: 1;}
+    to {opacity: 0;}
+}
+
+.target {
+  position: absolute;
+  background-image: url(../img/target.png);
+  background-size: cover;
+  border-radius: 50%;
+  animation:target 3s 1;
+  transition-property: width, height;
+  -webkit-animation:target 3s 1;
+  animation-fill-mode: forwards;  
+  -webkit-animation-fill-mode: forwards;
+}
+
 
 .fly {
   position: absolute;
